--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ a {
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #8f8161;
 }
 
 body {
@@ -29,6 +29,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  
 }
 
 h1 {
@@ -43,12 +44,12 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #c40000;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #080fa3;
+  border-color: #000004;
 }
 button:focus,
 button:focus-visible {
@@ -61,7 +62,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #1d28f0;
+    color: #000108;
   }
   button {
     background-color: #f9f9f9;
